themes/vantage/tags/1.2/README.md
Vantage Theme
---------------
Vantage is a multipurpose WordPress theme, based on _s with integration into SiteOrigin's extras framework.


License
---------------

Vantage WordPress Theme, Copyright 2013 Greg Priday
Vantage is distributed under the terms of the GNU GPL

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see http://www.gnu.org/copyleft/gpl.html.

Vantage WordPress Theme is derived from Underscores WordPress Theme, Copyright 2012 Automattic http://underscores.me/
Underscores WordPress Theme is distributed under the terms of the GNU GPL

Vantage WordPress Theme bundles the following third-party resources:

HTML5 Shiv, Copyright 2011 Alexander Farkas
Released under a dual MIT/GPL2 License
Source: https://code.google.com/p/html5shiv/

FitVids, Copyright 2013, Chris Coyier
Released under the WTFPL license - http://sam.zoy.org/wtfpl/
Source: http://fitvidsjs.com/

Flex Slider, Copyright 2012 WooThemes
Free to use under the GPLv2 license.
Source: http://www.woothemes.com/flexslider/

Selectivizr, Copyright 2011 Keith Clark
Freely distributable under the terms of the MIT license

LESS Elements, Copyright 2011 Dmitry Fadeyev
Dedicated to the public domain and is free for all uses, commercial or otherwise.

FontAwesome Copyright 2012 Dave Gandy
licensed under SIL OFL 1.1 <http://scripts.sil.org/OFL>


Demo Photos
---------------
This theme contains the following demo photos.

* Cell Phone image sourced from http://www.publicdomainpictures.net/view-image.php?image=15874&picture=woman-showing-a-cell-phone
  Licensed under Public Domain.
* Basketball Player image sourced from http://pixabay.com/en/basketball-sports-teams-players-95607/
  Licensed under Public Domain with confirmation of full Public Domain/CC0 license from the author.
* Nature Scene photo sourced from http://publicdomainarchive.com/
  Licensed under public domain.


SiteOrigin Extras
---------------
This theme is built around the SiteOrigin extras framework contained in the folder extras/. All code is licensed under GPL 2.0 and copyright Greg Priday unless otherwise stated in the file header.


Change Log
---------------

#### 1.2
* Fixed pagination issue.
* Updates for compatibility with Page Builder.
* Improved compatibility with WordPress reading settings.
* Removed all uses of query_posts.
* Ensure only published posts are queried by the carousel.
* Made sure all images used in demo are fully public domain.
* Updated theme screenshot to larger size.
* Turned home-panels into a standard page template.
* Framework updates.
* Clarified theme and bundled resource licenses.

#### 1.1.12
* Updated to latest extras framework.
* Fixed small issue in responsive checkout.
* Fixed ordering of header widgets.
* Additional improvements to bundled POT file.

#### 1.1.11
* Fixed multi level hover issue in menus on mobile devices.
* Fixed logo image HTML by adding spaces between attributes.
* Shorten title in next and previous post links if they're too long.
* Fixed conflict with HQ WP Photo Seller plugin.
* Improved bundled translation file.
* Premium: Fixed issue with Skype URLs in social widget.
* Premium: Added responsive code for social sharing icons.
* Premium: Fixed bug in mobile navigation search.

#### 1.1.10
* Added support for a custom menu widget in the header widget area.
* Added support for advanced row styles in Page Builder 1.4.4.
* Premium: Added customization for the menu widget in the header widget area.
* Premium: Fixed customizer live preview.

#### 1.1.9
* Fixed header widget resizing.
* Minor typo fixes.
* Fixed responsive layout for circle icon post loop.
* Premium: Added customization for logo centering and removing content image drop shadow.
* Premium: Added customisation for current menu item.
* Premium: Fixed icon hover color customize.

#### 1.1.8
* Fixed circle icon widget issue.
* Meta Slider compatibility fix.
* Improved WooCommerce responsive.
* Fixed CSS for WooCommerce checkout to make it responsive.
* Added CSS for WooCommerce product list widgets.
* Fixed logo spacing with logo in menu and boxed layout combination.
* Added right margin to header widgets when there are more than 1.
* Added missing translation text domains.

#### 1.1.7
* Fixed issue in settings section of admin.

#### 1.1.6
* Fixed header resizing for header widget area.
* Fixed bug that occurred when using a large widget in the header area.
* Added way for child themes to specify their own masthead and footer files.
* Added a different masthead layout - with logo in the menu.
* Small WordPress 3.8 fixes.
* WooCommerce CSS fixes.
* Premium: Fixed customizer setting for footer widgets.
* Premium: Improved mobile navigation.

#### 1.1.5
* Fixed image margins.
* Fixed image with caption center alignment.
* Fixed WordPress gallery layout.
* Fixed content width.
* Fixed intermittent problem with menu hovers.
* Premium: Added more customization options.

#### 1.1.4
* Fixed Circle Icon widget clash with FontAwesome CSS.
* Small changes to premium upgrade page.
* Fixed some invalid HTML.
* Various CSS fixes and responsive improvements.
* Premium: Fixed Twitter share.

#### 1.1.3
* Fixed RSS icon CSS.
* Fixed double pagination on category pages.
* Fixed alignment of social icons for responsive layout.
* Fixed search pagination.
* Added maximum logo width to prevent overflow.
* Removed iframe from premium upgrade page.
* Minor CSS fixes.

#### 1.1.2
* Premium: Fixed auto updates system.

#### 1.1.1
* Fixed Social widget to improve display in header on boxed layout.
* Fixed archive posts view.
* Premium: Added customizer settings for main menu to change icon color and item padding.
* Premium: Removed duplicate CSS for social icon.
* Premium: Improved mobile navigation.

#### 1.1
* Added blog archive settings to change layout and thumbnail display.
* Added widgetized area to the header. Designed for a single widget to replace site info text.
* Fix to responsive CSS for WooCommerce integration.
* Fixed IE8 issues with site logo and fonts.
* Small changes to header CSS to give a more logical header padding. **Double check your child theme/custom CSS if you've customized the header.**
* Added social media icons widget. Vantage Premium has additional sizes and networks.
* Premium: Added customizer setting to change header padding.

#### 1.0.13
* Fixed issue with Meta Slider on home page.
* Added setting for blog featured image.

#### 1.0.12
* Fixed an issue that was causing duplicate rechecks to the SiteOrigin update server.
* Added option for home page icon.

#### 1.0.11
* Fixed small design breaking CSS bug.

#### 1.0.10
* Added size options for circle icon widget.
* Fixed post navigation and added a setting to remove it.
* Premium: Fixed customization.

#### 1.0.9
* Fixed responsive header for iPad.
* Fixed drop down menu for iPad.
* Added mobile-device class to body when visiting from a mobile device.
* Responsive CSS improvements.
* Fixed carousel loop with long title.
* Premium: Added more customizations.

#### 1.0.8
* Fixed issue with home slider being shown on blog archives.
* Fixed logo issues with Jetpack Photon.
* Minor bug fixes.
* Premium: Added more customizations.
* Premium: Added Page Builder element styles.

#### 1.0.7
* Removed call to function that isn't part of WordPress core.
* Bug fixes with Meta Slider integration.

#### 1.0.6
* Added option to have Meta Slider as page header.
* Fixed non responsive layout.
* Removed sticky menu and scroll to top from mobile devices.
* Premium: Customizer integration.

#### 1.0.5
* Fixed ordering of footer widgets.
* Minor CSS fixes and changes.
* Added IE compatibility header to prevent compatibility mode from breaking design.
* Handles no sidebar properly.
* Added a way to include an overlay image in Meta Slider free.

#### 1.0.4
* Added retina icons.
* Created spritemaps.
* Various fixes and improvements.
* Fixes some CSS issues that resulted from broken build process.
* Added minified Javascript

#### 1.0.3
* Set background color for CSS footer.
* Added circle icon post loop.
* Added options to circle icon widget.
* Added some more WooCommerce styles.
* Various bug fixes.
* Additional theme settings.

#### 1.0.2
* Fixed issue with Meta Slider integration.
* Added more hooks and filters to logo.
* HTML code clean up.
* Framework updates.

#### 1.0.1
* A few minor bug fixes and updates.

#### 1.0
* Initial release.